Bubble Agency Landing Page

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
             <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
             <li class="nav-item"><a class="nav-link" href="#how-it-works">How it works</a></li>
+            <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
             <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
           </ul>
           <a href="#contact" class="btn btn-primary">Get a Quote</a>
@@ -94,6 +95,51 @@
             <div class="mb-2 fs-1 text-primary">3</div>
             <h5>Launch & Support</h5>
             <p>We launch your app, provide documentation, and support your ongoing growth.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="projects" class="py-5">
+      <div class="container">
+        <h2 class="text-center mb-4">Recent Bubble Projects</h2>
+        <p class="text-center mb-5 text-muted">Explore some of our flagship Bubble app builds—delivered for entrepreneurs & startups worldwide.</p>
+        <div class="row g-4">
+          <div class="col-md-4">
+            <div class="card project-card h-100 shadow">
+              <img src="https://images.unsplash.com/photo-1461749280684-dccba630e2f6?auto=format&fit=crop&w=600&q=80" 
+                   class="card-img-top" 
+                   alt="Social platform Bubble app project preview image" 
+                   style="height: 220px; object-fit: cover;">
+              <div class="card-body">
+                <h5 class="card-title">Social Connect Platform</h5>
+                <p class="card-text">A scalable Bubble SaaS connecting communities via chats, events, and integrated video calls.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card project-card h-100 shadow">
+              <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=600&q=80" 
+                   class="card-img-top" 
+                   alt="E-commerce marketplace Bubble app project preview image" 
+                   style="height: 220px; object-fit: cover;">
+              <div class="card-body">
+                <h5 class="card-title">E-Commerce Marketplace</h5>
+                <p class="card-text">Custom Bubble-powered marketplace for handmade goods. Full Stripe integration and advanced search.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card project-card h-100 shadow">
+              <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?auto=format&fit=crop&w=600&q=80" 
+                   class="card-img-top" 
+                   alt="Internal tool Bubble app project preview image" 
+                   style="height: 220px; object-fit: cover;">
+              <div class="card-body">
+                <h5 class="card-title">Internal Dashboard</h5>
+                <p class="card-text">Analytics and automation for a logistics company, built 100% with Bubble’s visual logic and API workflows.</p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
