--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
         <div class="row g-4">
           <div class="col-md-4">
             <div class="card project-card h-100 shadow">
-              <img src="https://images.unsplash.com/photo-1450101499163-c8848c66ca85?auto=format&fit=crop&w=600&q=80" 
+              <img src="https://images.unsplash.com/photo-1465101178521-c1a9136a03a0?auto=format&fit=crop&w=600&q=80" 
                    class="card-img-top" 
-                   alt="Team collaborating on digital social platform project" 
+                   alt="DSL digital service - fiber optic cables and technology infrastructure" 
                    style="height: 220px; object-fit: cover;">
               <div class="card-body">
                 <h5 class="card-title">Social Connect Platform</h5>
